# dual-readout

./: CMakeLists.txt  envset_dualreadout.sh  test_setup.sh
DRreco/include/: DRgeoCheck.h
DRreco/src/: DRcalib2D.cpp  DRcalib3D.cpp  DRgeoCheck.cpp
DRreco/test/: runDRgeoCheck.py
DRsim/DRsimG4Components/src/: SimG4SaveDRcaloHits.cpp
DRsim/DRsimG4Full/: CMakeLists.txt
DRsim/DRsimG4Full/include/: SimG4DRcaloActionInitialization.h  SimG4DRcaloSteppingAction.h
DRsim/DRsimG4Full/src/components/: SimG4DRcaloActions.cpp  SimG4DRcaloActions.h
Detector/DRcalo/compact/: DRcalo.xml  DRcalo_IDEA.xml  DRcalo_Wratten9_S13615-1025.xml
Detector/DRcalo/src/: DRconstructor.cpp
Detector/DRsegmentation/include/: DRparamBase.h
Detector/DRsensitive/: CMakeLists.txt
Detector/DRsensitive/include/: DRcaloSiPMSD.h
Detector/DRsensitive/src/: DRcaloSiPMSD.cpp
analysis/: CMakeLists.txt  analysis.cpp  geoCheck.cpp  geoCheck_usingFunc.cpp
